# er-terminale-romano

./: .gitignore  CONTRIBUTING.md  LICENSE  Modelfile  README.md  index.js  install.sh  package-lock.json  package.json  pyproject.toml  spinners.json
.github/: PULL_REQUEST_TEMPLATE.md
editors/: README.md
editors/cursor/: settings.json
editors/jetbrains/: opencode-romano.run.xml
editors/neovim/: opencode.lua
editors/vscode/: settings.json
editors/zed/: settings.json
er_terminale_romano/: __init__.py  spinners-romanzo-criminale.json  spinners.json
examples/: spinner-example.js  spinner-example.py
