[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "er-terminale-romano"
version = "1.0.0"
description = "Spinner verbs in Romanesco dialect — senza token extra 🤌"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["spinner", "romanesco", "italian", "dialect", "terminal", "cli", "loading", "halo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/DemPago/er-terminale-romano"
Repository = "https://github.com/DemPago/er-terminale-romano"
Issues    = "https://github.com/DemPago/er-terminale-romano/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["er_terminale_romano*"]

[tool.setuptools.package-data]
er_terminale_romano = ["*.json"]
